--- a/7.2022/submit.ipynb
+++ b/7.2022/submit.ipynb
@@ -23,14 +23,25 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# load & scale\n",
+    "# load\n",
     "data_path = pathlib.Path().joinpath('data', 'data.csv')\n",
     "data = pd.read_csv(data_path, index_col='id')\n",
-    "# scaled = pd.DataFrame(MinMaxScaler().fit_transform(data), index=data.index, columns=data.columns)\n",
-    "scaled = MaxAbsScaler().fit_transform(data)\n",
     "\n",
-    "# Transform\n",
-    "scaled = PowerTransformer().fit_transform(scaled)"
+    "# int as dummies\n",
+    "# int_columns = data.columns[data.dtypes == int]\n",
+    "# dummies = pd.get_dummies(data[int_columns].astype('category'))\n",
+    "# data = pd.concat([data.drop(int_columns, axis=1), dummies], axis=1)\n",
+    "\n",
+    "# PowerTransform int\n",
+    "# int_columns = data.columns[data.dtypes == int]\n",
+    "# data[int_columns] = power_transform(data[int_columns])\n",
+    "\n",
+    "# prepare data\n",
+    "scaled = make_pipeline(\n",
+    "    # RobustScaler(),\n",
+    "    PowerTransformer(),\n",
+    "    MaxAbsScaler(),\n",
+    ").fit_transform(data)"
    ]
   },
   {
@@ -52,8 +63,68 @@
    "source": [
     "# Kaggle 0.50762: MinMaxScaler\n",
     "# Kaggle 0.58013: MaxAbsScaler + PowerTransformer\n",
-    "gmm = GaussianMixture(n_components=7, random_state=17).fit(scaled)\n",
-    "predicted = gmm.predict(scaled)"
+    "# gmm = GaussianMixture(n_components=7, random_state=17).fit(scaled)\n",
+    "# predicted = gmm.predict(scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def multiple_clustering(X, estimator, *, frac=0.7, iters=3, seed=None):\n",
+    "    n_clusters = 7\n",
+    "    assert (frac > 0) and (frac <= 1), \"frac must be > 0 and <= 1\"\n",
+    "    np.random.seed(seed)\n",
+    "\n",
+    "    labels = []\n",
+    "    score = np.zeros((X.shape[0], n_clusters))\n",
+    "    probability = np.zeros((X.shape[0], n_clusters))\n",
+    "    n_feats = np.ceil(frac * X.shape[1]).astype(int)\n",
+    "    for i in tqdm(range(iters), desc='fit', total=iters):       # parallel?\n",
+    "        feats = np.random.choice(range(X.shape[1]), n_feats, replace=False)\n",
+    "        estimator.set_params(random_state=np.random.randint(2 ** 16))\n",
+    "        estimator.fit(X[:, feats])\n",
+    "        proba = estimator.predict_proba(X[:, feats])\n",
+    "        cluster = proba.argmax(axis=1)\n",
+    "        \n",
+    "        # translate labels\n",
+    "        order = pd.Series(cluster).value_counts().index\n",
+    "        remap = dict(zip(order, range(n_clusters)))\n",
+    "        lb = np.vectorize(remap.get)(cluster)\n",
+    "        labels.append(lb)\n",
+    "        # update proba\n",
+    "        probability += proba[:, order]\n",
+    "        # calc mean vec\n",
+    "        mean_vec = [X[lb == cl].mean(axis=0) for cl in range(n_clusters)]\n",
+    "        if i == 0:\n",
+    "            base_mean_vec = np.copy(mean_vec)\n",
+    "        # distance & weights\n",
+    "        dist = pairwise_distances(base_mean_vec, mean_vec, metric='euclidean')\n",
+    "        weights = 1 / (1 + dist ** 2)\n",
+    "        # addition\n",
+    "        score += proba[:, order] @ weights.T\n",
+    "\n",
+    "    # bundle translated labels\n",
+    "    bundle = np.c_[labels].T\n",
+    "    # count labels\n",
+    "    counter = np.apply_along_axis(lambda row: dict(zip(*np.unique(row, return_counts=True))), 1, bundle)\n",
+    "    count = pd.DataFrame(list(counter)).fillna(0)[range(n_clusters)].values\n",
+    "    return score, count, probability"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Kaggle 0.59826\n",
+    "scr, cnt, prb = multiple_clustering(scaled, BayesianGaussianMixture(n_components=7, max_iter=150, n_init=3, tol=0.01), frac=1, iters=150, seed=17)\n",
+    "predicted = scr.argmax(axis=1)\n",
+    "# predicted = cnt.argmax(axis=1)\n",
+    "# predicted = prb.argmax(axis=1)"
    ]
   },
   {
