--- a/S3E12/research.ipynb
+++ b/S3E12/research.ipynb
@@ -2,23 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from lightgbm import LGBMClassifier\n",
-    "from sklearn.model_selection import StratifiedKFold, train_test_split\n",
+    "from sklearn.model_selection import StratifiedKFold\n",
+    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.base import BaseEstimator, TransformerMixin\n",
+    "import sklearn.preprocessing as pre\n",
+    "from S3E12.transforming import WithSelected\n",
+    "\n",
     "from sklearn.metrics import f1_score, roc_auc_score, ConfusionMatrixDisplay\n",
-    "# from sklearn.linear_model import SGDClassifier\n",
-    "\n",
-    "\n",
-    "submission = pd.read_csv('data/sample_submission.csv')"
+    "# from sklearn.linear_model import SGDClassifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,10 +30,217 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# class MeanBy(BaseEstimator, TransformerMixin):\n",
+    "#     def __init__(self, by):\n",
+    "#         self.__mean = None\n",
+    "#         self.__basic_mean = None\n",
+    "#         self.__by = by\n",
+    "    \n",
+    "#     def fit(self, X, y=None):\n",
+    "#         df = X.copy()\n",
+    "#         self.__mean = df.groupby(self.__by).mean()\n",
+    "#         self.__basic_mean = df.mean()\n",
+    "#         return self\n",
+    "\n",
+    "#     def transform(self, X, y=None):\n",
+    "#         X = X.copy()\n",
+    "#         if self.__by in X.columns:\n",
+    "#             return X.merge(self.__mean, on=self.__by, suffixes=('', '_mean'))\n",
+    "#         else:\n",
+    "#             exists = self.__basic_mean[self.__basic_mean.index.isin(X.columns)]\n",
+    "#             X[[f'{f}_mean' for f in exists.index]] = exists\n",
+    "#             return X"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 152,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>gravity</th>\n",
+       "      <th>ph</th>\n",
+       "      <th>osmo</th>\n",
+       "      <th>cond</th>\n",
+       "      <th>urea</th>\n",
+       "      <th>calc</th>\n",
+       "      <th>gravity_bins</th>\n",
+       "      <th>ph_bins</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1.013</td>\n",
+       "      <td>6.19</td>\n",
+       "      <td>443</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>124</td>\n",
+       "      <td>1.45</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>1.025</td>\n",
+       "      <td>5.40</td>\n",
+       "      <td>703</td>\n",
+       "      <td>23.6</td>\n",
+       "      <td>394</td>\n",
+       "      <td>4.18</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>1.009</td>\n",
+       "      <td>6.13</td>\n",
+       "      <td>371</td>\n",
+       "      <td>24.5</td>\n",
+       "      <td>159</td>\n",
+       "      <td>9.04</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>4.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>1.021</td>\n",
+       "      <td>4.91</td>\n",
+       "      <td>442</td>\n",
+       "      <td>20.8</td>\n",
+       "      <td>398</td>\n",
+       "      <td>6.63</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>1.021</td>\n",
+       "      <td>5.53</td>\n",
+       "      <td>874</td>\n",
+       "      <td>17.8</td>\n",
+       "      <td>385</td>\n",
+       "      <td>2.21</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   id  gravity    ph  osmo  cond  urea  calc  gravity_bins  ph_bins\n",
+       "0   0    1.013  6.19   443  14.8   124  1.45           0.0      5.0\n",
+       "1   1    1.025  5.40   703  23.6   394  4.18           2.0      1.0\n",
+       "2   2    1.009  6.13   371  24.5   159  9.04           0.0      4.0\n",
+       "3   3    1.021  4.91   442  20.8   398  6.63           2.0      0.0\n",
+       "4   4    1.021  5.53   874  17.8   385  2.21           2.0      2.0"
+      ]
+     },
+     "execution_count": 152,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# PREPROCESSING\n",
+    "X = source.drop(columns=['target'])\n",
+    "y = source.target\n",
+    "\n",
+    "pipe = make_pipeline(\n",
+    "    WithSelected(['gravity'], suffix='bins')(\n",
+    "        pre.KBinsDiscretizer(n_bins=3, encode='ordinal', strategy='quantile'),\n",
+    "    ),\n",
+    "    WithSelected(['ph'], suffix='bins')(\n",
+    "        pre.KBinsDiscretizer(n_bins=7, encode='ordinal', strategy='quantile'),\n",
+    "    ),\n",
+    ")\n",
+    "\n",
+    "X_train = pipe.fit_transform(X, y)\n",
+    "X_test = pipe.transform(test)\n",
+    "\n",
+    "X_train.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# FIT\n",
     "folds = 3\n",
     "\n",
     "X = source.drop(columns=['id', 'target'])\n",
