CatBoost TOP-20 features (0.87866)

--- a/S3E12/submit.ipynb
+++ b/S3E12/submit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,12 +21,12 @@
     "from sklearn.metrics import f1_score, roc_auc_score\n",
     "from sklearn.pipeline import make_pipeline\n",
     "import sklearn.preprocessing as pre\n",
-    "from transforming import WithSelected, DFPowerTransform, Apply, Drop"
+    "from transforming import WithSelected, DFPowerTransform, Apply, Calc, Select"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,75 +47,76 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "original = ['gravity', 'ph', 'osmo', 'cond', 'urea', 'calc']\n",
     "pipe = make_pipeline(\n",
-    "    WithSelected(original, 'pow')(\n",
+    "    Calc('calc * urea', to='ion_prod'),\n",
+    "    Calc('calc / urea', to='ion_rate'),\n",
+    "    # Calc('osmo / gravity', to='osmo_gravity_rate'),\n",
+    "    Calc('calc / ph', to='calc_ph_rate'),\n",
+    "    \n",
+    "    WithSelected(None, 'pow')(\n",
     "        DFPowerTransform()\n",
     "    ),\n",
-    "    WithSelected(['gravity', 'gravity_pow'], suffix='bins')(\n",
-    "        pre.KBinsDiscretizer(7, encode='ordinal', strategy='quantile')\n",
-    "    ),\n",
-    "    WithSelected(['ph', 'ph_pow'], suffix='bins')(\n",
-    "        pre.KBinsDiscretizer(7, encode='ordinal', strategy='quantile')\n",
-    "    ),\n",
-    "    WithSelected(['osmo', 'osmo_pow'], suffix='bins')(\n",
-    "        pre.KBinsDiscretizer(10, encode='ordinal', strategy='quantile')\n",
-    "    ),\n",
-    "    WithSelected(['cond', 'cond_pow'], suffix='bins')(\n",
-    "        pre.KBinsDiscretizer(5, encode='ordinal', strategy='quantile')\n",
-    "    ),\n",
-    "    WithSelected(['urea', 'urea_pow'], suffix='bins')(\n",
-    "        pre.KBinsDiscretizer(10, encode='ordinal', strategy='quantile')\n",
-    "    ),\n",
-    "    WithSelected(['calc', 'calc_pow'], suffix='bins')(\n",
-    "        pre.KBinsDiscretizer(5, encode='ordinal', strategy='quantile')\n",
+    "    WithSelected(['calc', 'ph', 'gravity'], suffix='bins')(\n",
+    "        pre.KBinsDiscretizer(7, encode='onehot', strategy='kmeans')\n",
     "    ),\n",
     "\n",
-    "    # Apply(\n",
-    "    #     estimator=KNeighborsClassifier(7, leaf_size=30, n_jobs=-1),\n",
-    "    #     to='neighbours'\n",
-    "    # ),\n",
     "    Apply(\n",
+    "        # estimator=LinearDiscriminantAnalysis(),\n",
+    "        # locpipe=pre.Normalizer(),\n",
     "        estimator=LinearDiscriminantAnalysis(solver='lsqr'),\n",
-    "        locpipe=pre.Normalizer(),\n",
+    "        locpipe=pre.StandardScaler(),\n",
     "        # on=lambda columns: [col for col in columns if 'pow' in col],\n",
-    "        to='lda'\n",
+    "        to='lda',\n",
+    "        as_proba=True\n",
     "    ),\n",
     "    Apply(\n",
     "        estimator=KNeighborsClassifier(7, leaf_size=30, n_jobs=-1),\n",
-    "        to='neighbours'\n",
+    "        to='neighbours',\n",
+    "        as_proba=True\n",
     "    ),\n",
     "    Apply(\n",
-    "        estimator=IsolationForest(n_estimators=20, max_samples='auto', warm_start=True, bootstrap=True, n_jobs=-1, random_state=17),\n",
+    "        estimator=IsolationForest(n_estimators=10, max_samples='auto', warm_start=True, bootstrap=True, n_jobs=-1, random_state=17),\n",
     "        locpipe=pre.Normalizer(),\n",
     "        to='isolation'\n",
     "    ),\n",
-    "    # Drop(original),\n",
-    "    # Drop([col for col in X.columns if 'calc' in col])\n",
+    "\n",
+    "    Calc('neighbours / calc', to='ngb_calc_rate'),\n",
+    "    Calc('lda / calc', to='lda_calc_rate'),\n",
+    "    Calc('neighbours / ph', to='ngb_ph_rate'),\n",
+    "    Calc('lda / ph', to='lda_ph_rate'),\n",
+    "    Calc('neighbours / gravity', to='ngb_gravity_rate'),\n",
+    "    Calc('lda / gravity', to='lda_gravity_rate'),\n",
+    "\n",
+    "    Calc('neighbours / lda', to='ngb_lda_rate'),\n",
+    "\n",
+    "    Select(['lda_gravity_rate', 'lda', 'lda_ph_rate', 'ngb_calc_rate', 'neighbours', \n",
+    "            'ngb_gravity_rate', 'ngb_ph_rate', 'ngb_lda_rate', 'lda_calc_rate', 'ion_rate_pow', \n",
+    "            'calc_pow', 'ph_pow', 'ion_rate', 'ion_prod_pow', 'gravity', \n",
+    "            'cond_pow', 'cond', 'calc', 'calc_ph_rate', 'ph_bins_2'])\n",
     ")\n",
     "\n",
-    "X = pipe.fit_transform(X_source, y)\n",
-    "X_test = pipe.transform(test.drop(columns=['id']))\n",
     "\n",
-    "pred = []"
+    "X = pipe.fit_transform(X_source, y)\n",
+    "X_test = pipe.transform(test.drop(columns=['id']))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9029182419659735"
+       "0.9210066162570888"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,16 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8727788279773155"
+       "0.8995746691871455"
       ]
      },
-     "execution_count": 79,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -156,16 +157,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9040170132325143"
+       "0.9317225897920606"
       ]
      },
-     "execution_count": 74,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,16 +182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8969754253308129"
+       "0.9198487712665406"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -218,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
