--- a/S3E12/submit.ipynb
+++ b/S3E12/submit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,15 +18,15 @@
     "from xgboost import XGBClassifier\n",
     "\n",
     "\n",
-    "from sklearn.metrics import f1_score, roc_auc_score\n",
+    "from sklearn.metrics import roc_auc_score\n",
     "from sklearn.pipeline import make_pipeline\n",
     "import sklearn.preprocessing as pre\n",
-    "from transforming import WithSelected, DFPowerTransform, Apply, Calc, Select"
+    "from transforming import WithSelected, Apply, Calc, Select, TypeRecast"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,24 +47,75 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(414, 69)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "original = ['gravity', 'ph', 'osmo', 'cond', 'urea', 'calc']\n",
     "pipe = make_pipeline(\n",
-    "    Calc('calc * urea', to='ion_prod'),\n",
-    "    Calc('calc / urea', to='ion_rate'),\n",
-    "    # Calc('osmo / gravity', to='osmo_gravity_rate'),\n",
-    "    Calc('calc / ph', to='calc_ph_rate'),\n",
-    "    \n",
-    "    WithSelected(None, 'pow')(\n",
-    "        DFPowerTransform()\n",
-    "    ),\n",
-    "    WithSelected(['calc', 'ph', 'gravity'], suffix='bins')(\n",
-    "        pre.KBinsDiscretizer(7, encode='onehot', strategy='kmeans')\n",
-    "    ),\n",
+    "    # is_norma features\n",
+    "    # Calc('1*((1.008 < gravity) & (gravity < 1.030))', to='gravity_is_norma'),\n",
+    "    # Calc('1*(urea <= 35)', to='urea_is_norma'),\n",
+    "    # Calc('1*((2.5 < calc) & (calc < 7.5))', to='calc_is_norma'),\n",
     "\n",
+    "    # pH-like\n",
+    "    Calc('-np.log10(calc * 10e-6)', to='pCalc'),\n",
+    "    Calc('-np.log10(urea * 10e-6)', to='pUr'),\n",
+    "    Calc('-np.log10(osmo)', to='pOs'),\n",
+    "    Calc('-np.log10(cond)', to='pCond'),\n",
+    "    # Calc('pCalc - ph', to='pCalc_ph_diff'),\n",
+    "    # Calc('pUr - ph', to='pUr_ph_diff'),\n",
+    "\n",
+    "    # prod & ratio\n",
+    "    Calc('gravity / ph', to='gravity_ph_rate'),\n",
+    "    Calc('gravity * ph', to='gravity_ph_prod'),\n",
+    "    Calc('gravity * osmo', to='gravity_osmo_prod'),\n",
+    "    Calc('gravity / calc', to='gravity_calc_rate'),\n",
+    "    Calc('osmo / cond', to='osmo_cond_rate'),\n",
+    "    Calc('osmo * urea', to='osmo_urea_prod'),\n",
+    "    Calc('osmo * ph', to='osmo_ph_prod'),\n",
+    "    Calc('(cond * urea) / ph', to='cond_urea_prod_ph_rate'),\n",
+    "    Calc('cond * calc', to='cond_calc_prod'),\n",
+    "    Calc('(gravity * osmo) / urea', to='gravity_osmo_prod_urea_rate'),\n",
+    "\n",
+    "    # Calc('calc / urea', to='calc_urea_rate'),\n",
+    "    # Calc('calc / ph', to='calc_ph_rate'),\n",
+    "    Calc('pOs / gravity', to='pOs_gravity_rate'),\n",
+    "    Calc('pOs / ph', to='pOs_ph_rate'),\n",
+    "    Calc('gravity / ph', to='gravity_ph_rate'),\n",
+    "    Calc('gravity / pCalc', to='gravity_pCalc_rate'),\n",
+    "    Calc('pCond / ph', to='pCond_ph_rate'),\n",
+    "    Calc('pCond / pCalc', to='pCond_pCalc_rate'),\n",
+    "    Calc('pCond / pUr', to='pCond_pUr_rate'),\n",
+    "\n",
+    "    # Calc('(osmo * gravity) / (cond * ph)', to='osmo_gravity_prod_cond_ph_prod_rate'),\n",
+    "    # Calc('cond / (urea * calc)', to='cond_(urea_calc_prod)_rate'),\n",
+    "\n",
+    "    # Calc('', to=''),\n",
+    "    # Calc('', to=''),\n",
+    "\n",
+    "    # power\n",
+    "    WithSelected(None, 'pow')(\n",
+    "    # WithSelected(original, 'pow')(\n",
+    "        pre.PowerTransformer()\n",
+    "    ),\n",
+    "    # categirues/binaries\n",
+    "    WithSelected(original, suffix='bins')(\n",
+    "    # WithSelected(lambda columns: [col for col in columns if 'norma' not in col and 'pow' not in col], suffix='bins')(\n",
+    "        pre.KBinsDiscretizer(7, encode='ordinal', strategy='kmeans')\n",
+    "    ),\n",
+    "    # analysis\n",
     "    Apply(\n",
     "        # estimator=LinearDiscriminantAnalysis(),\n",
     "        # locpipe=pre.Normalizer(),\n",
@@ -79,44 +130,48 @@
     "        to='neighbours',\n",
     "        as_proba=True\n",
     "    ),\n",
-    "    Apply(\n",
-    "        estimator=IsolationForest(n_estimators=10, max_samples='auto', warm_start=True, bootstrap=True, n_jobs=-1, random_state=17),\n",
-    "        locpipe=pre.Normalizer(),\n",
-    "        to='isolation'\n",
-    "    ),\n",
-    "\n",
+    "    # Apply(\n",
+    "    #     estimator=IsolationForest(n_estimators=10, max_samples='auto', warm_start=True, bootstrap=True, n_jobs=-1, random_state=17),\n",
+    "    #     locpipe=pre.Normalizer(),\n",
+    "    #     to='isolation'\n",
+    "    # ),\n",
+    "    # calculations with generated features\n",
     "    Calc('neighbours / calc', to='ngb_calc_rate'),\n",
     "    Calc('lda / calc', to='lda_calc_rate'),\n",
     "    Calc('neighbours / ph', to='ngb_ph_rate'),\n",
     "    Calc('lda / ph', to='lda_ph_rate'),\n",
     "    Calc('neighbours / gravity', to='ngb_gravity_rate'),\n",
     "    Calc('lda / gravity', to='lda_gravity_rate'),\n",
+    "    # Calc('neighbours / lda', to='ngb_lda_rate'),\n",
+    "    Calc('(osmo / gravity) * lda', to='osmo_gravity_rate_lda_weighted'),\n",
     "\n",
-    "    Calc('neighbours / lda', to='ngb_lda_rate'),\n",
+    "    Calc('(calc * urea / ph) * lda', to='ion_lda_prod'),\n",
+    "    Calc('(calc * urea / ph) * neighbours', to='ion_ngb_prod'),\n",
     "\n",
-    "    Select(['lda_gravity_rate', 'lda', 'lda_ph_rate', 'ngb_calc_rate', 'neighbours', \n",
-    "            'ngb_gravity_rate', 'ngb_ph_rate', 'ngb_lda_rate', 'lda_calc_rate', 'ion_rate_pow', \n",
-    "            'calc_pow', 'ph_pow', 'ion_rate', 'ion_prod_pow', 'gravity', \n",
-    "            'cond_pow', 'cond', 'calc', 'calc_ph_rate', 'ph_bins_2'])\n",
+    "    TypeRecast(\n",
+    "        int=lambda columns: [col for col in columns if 'bins' in col],\n",
+    "    )\n",
+    "    \n",
+    "    # Select(original, mode='drop'),\n",
     ")\n",
     "\n",
-    "\n",
     "X = pipe.fit_transform(X_source, y)\n",
-    "X_test = pipe.transform(test.drop(columns=['id']))"
+    "X_test = pipe.transform(test.drop(columns=['id']))\n",
+    "X.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9210066162570888"
+       "0.9332230623818525"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,16 +187,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.8995746691871455"
+       "0.9099480151228734"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,16 +212,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9317225897920606"
+       "0.9364839319470699"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,16 +237,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9198487712665406"
+       "0.9237476370510397"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -219,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
