--- a/S3E12/submit.ipynb
+++ b/S3E12/submit.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
     "\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "from sklearn.ensemble import IsolationForest\n",
-    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis, QuadraticDiscriminantAnalysis\n",
     "from lightgbm import LGBMClassifier\n",
     "from catboost import CatBoostClassifier\n",
     "from xgboost import XGBClassifier\n",
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(414, 69)"
+       "(414, 105)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -113,7 +113,7 @@
     "    # categirues/binaries\n",
     "    WithSelected(original, suffix='bins')(\n",
     "    # WithSelected(lambda columns: [col for col in columns if 'norma' not in col and 'pow' not in col], suffix='bins')(\n",
-    "        pre.KBinsDiscretizer(7, encode='ordinal', strategy='kmeans')\n",
+    "        pre.KBinsDiscretizer(7, encode='onehot', strategy='kmeans')\n",
     "    ),\n",
     "    # analysis\n",
     "    Apply(\n",
@@ -125,6 +125,13 @@
     "        to='lda',\n",
     "        as_proba=True\n",
     "    ),\n",
+    "    # Apply(\n",
+    "    #     estimator=QuadraticDiscriminantAnalysis(),\n",
+    "    #     locpipe=pre.StandardScaler(),\n",
+    "    #     # on=lambda columns: [col for col in columns if 'pow' in col],\n",
+    "    #     to='lda',\n",
+    "    #     as_proba=True\n",
+    "    # ),\n",
     "    Apply(\n",
     "        estimator=KNeighborsClassifier(7, leaf_size=30, n_jobs=-1),\n",
     "        to='neighbours',\n",
@@ -162,16 +169,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9332230623818525"
+       "0.9564035916824197"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,16 +194,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.9099480151228734"
+       "0.9384924385633271"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -274,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
